@@ -5,29 +5,36 @@
 
 package net.atos.zac.mailtemplates.model;
 
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.EnumSet;
-import java.util.HashSet;
 import java.util.Set;
 
 public enum MailTemplateVariabelen {
 
-    ZAAKNUMMER(false),
-    ZAAKTYPE(false),
-    ZAAKSTATUS(false),
-    REGISTRATIEDATUM(false),
-    STARTDATUM(false),
-    STREEFDATUM(true),
-    FATALEDATUM(false),
-    OMSCHRIJVINGZAAK(false),
-    TOELICHTINGZAAK(true),
-    INITIATOR(true),
-    ADRESINITIATOR(true),
-    TOEGEWEZENGROEPZAAK(false),
-    TOEGEWEZENGEBRUIKERZAAK(true),
-    TOEGEWEZENGROEPTAAK(false),
-    TOEGEWEZENGEBRUIKERTAAK(true),
-    ZAAKURL(false),
-    TAAKURL(false);
+    DOCUMENT_TITEL(false),
+    DOCUMENT_LINK(false),
+    DOCUMENT_URL(false),
+    TAAK_BEHANDELAAR_GROEP(false),
+    TAAK_BEHANDELAAR_MEDEWERKER(true),
+    TAAK_LINK(false),
+    TAAK_URL(false),
+    ZAAK_BEHANDELAAR_GROEP(false),
+    ZAAK_BEHANDELAAR_MEDEWERKER(true),
+    ZAAK_FATALEDATUM(false),
+    ZAAK_INITIATOR(true),
+    ZAAK_INITIATOR_ADRES(true),
+    ZAAK_LINK(false),
+    ZAAK_NUMMER(false),
+    ZAAK_OMSCHRIJVING(false),
+    ZAAK_REGISTRATIEDATUM(false),
+    ZAAK_STARTDATUM(false),
+    ZAAK_STATUS(false),
+    ZAAK_STREEFDATUM(true),
+    ZAAK_TOELICHTING(true),
+    ZAAK_TYPE(false),
+    ZAAK_URL(false);
 
     private final boolean resolveVariabeleAlsLegeString;
 
@@ -39,30 +46,77 @@ public enum MailTemplateVariabelen {
         return resolveVariabeleAlsLegeString;
     }
 
-    private static final Set<MailTemplateVariabelen> DEFAULT =
-            EnumSet.of(ZAAKNUMMER, ZAAKTYPE, ZAAKSTATUS, REGISTRATIEDATUM, STARTDATUM, STREEFDATUM, FATALEDATUM,
-                       OMSCHRIJVINGZAAK, TOELICHTINGZAAK);
+    // Sets of variables for mail templates for specific subject types
+    private static final Set<MailTemplateVariabelen> ZAAK_VARIABELEN =
+            toSet(ZAAK_NUMMER, ZAAK_TYPE, ZAAK_STATUS,
+                  ZAAK_REGISTRATIEDATUM, ZAAK_STARTDATUM, ZAAK_STREEFDATUM, ZAAK_FATALEDATUM,
+                  ZAAK_OMSCHRIJVING, ZAAK_TOELICHTING);
 
-    public static final Set<MailTemplateVariabelen> ZAAKSTATUSMAIL_VARIABELEN =
-            addToDefault(EnumSet.of(INITIATOR, ADRESINITIATOR));
+    private static final Set<MailTemplateVariabelen> TAAK_VARIABELEN =
+            toSet();
 
-    public static final Set<MailTemplateVariabelen> PROCESMAIL_VARIABELEN =
-            addToDefault(EnumSet.of(INITIATOR, ADRESINITIATOR));
+    private static final Set<MailTemplateVariabelen> DOCUMENT_VARIABELEN =
+            toSet(DOCUMENT_TITEL);
 
-    public static final Set<MailTemplateVariabelen> ZAAKSIGNALERINGMAIL_VARIABELEN =
-            addToDefault(EnumSet.of(ZAAKURL, TOEGEWEZENGROEPZAAK, TOEGEWEZENGEBRUIKERZAAK));
+    // Set of variables for templates for mail that will be sent to a klant or bedrijf
+    private static final Set<MailTemplateVariabelen> ZAAK_INITIATOR_VARIABELEN =
+            toSet(ZAAK_INITIATOR, ZAAK_INITIATOR_ADRES);
 
-    public static final Set<MailTemplateVariabelen> TAAKSIGNALERINGMAIL_VARIABELEN =
-            addToDefault(EnumSet.of(TAAKURL, TOEGEWEZENGROEPTAAK, TOEGEWEZENGEBRUIKERTAAK));
+    // Sets of variables for templates for mail that will be sent to a gebruiker
+    private static final Set<MailTemplateVariabelen> ZAAK_BEHANDELAAR_VARIABELEN =
+            toSet(ZAAK_URL, ZAAK_LINK,
+                  ZAAK_BEHANDELAAR_GROEP, ZAAK_BEHANDELAAR_MEDEWERKER);
 
-    private static Set<MailTemplateVariabelen> addToDefault(final Set<MailTemplateVariabelen> extraVariabelen) {
-        final Set<MailTemplateVariabelen> returnSet = new HashSet<>();
-        returnSet.addAll(DEFAULT);
-        returnSet.addAll(extraVariabelen);
-        return returnSet;
+    private static final Set<MailTemplateVariabelen> TAAK_BEHANDELAAR_VARIABELEN =
+            toSet(TAAK_URL, TAAK_LINK,
+                  TAAK_BEHANDELAAR_GROEP, TAAK_BEHANDELAAR_MEDEWERKER);
+
+    private static final Set<MailTemplateVariabelen> DOCUMENT_BEHANDELAAR_VARIABELEN =
+            toSet(DOCUMENT_URL, DOCUMENT_LINK);
+
+    // Sets of variables for mail templates for specific uses cases
+    public static final Set<MailTemplateVariabelen> ZAAK_VOORTGANG_VARIABELEN =
+            add(ZAAK_VARIABELEN, ZAAK_INITIATOR_VARIABELEN);
+
+    public static final Set<MailTemplateVariabelen> PROCES_VARIABELEN =
+            add(ZAAK_VARIABELEN, ZAAK_INITIATOR_VARIABELEN);
+
+    public static final Set<MailTemplateVariabelen> ZAAK_SIGNALERING_VARIABELEN =
+            add(ZAAK_VARIABELEN, ZAAK_BEHANDELAAR_VARIABELEN);
+
+    public static final Set<MailTemplateVariabelen> TAAK_SIGNALERING_VARIABELEN =
+            add(add(ZAAK_SIGNALERING_VARIABELEN, TAAK_VARIABELEN), TAAK_BEHANDELAAR_VARIABELEN);
+
+    public static final Set<MailTemplateVariabelen> DOCUMENT_SIGNALERING_VARIABELEN =
+            add(add(ZAAK_SIGNALERING_VARIABELEN, DOCUMENT_VARIABELEN), DOCUMENT_BEHANDELAAR_VARIABELEN);
+
+    private static Set<MailTemplateVariabelen> toSet(
+            final MailTemplateVariabelen... values) {
+        return Collections.unmodifiableSet(toEnumSet(Arrays.asList(values)));
+    }
+
+    private static Set<MailTemplateVariabelen> add(
+            final Set<MailTemplateVariabelen> set,
+            final MailTemplateVariabelen... values) {
+        return add(set, toEnumSet(Arrays.asList(values)));
+    }
+
+    private static Set<MailTemplateVariabelen> add(
+            final Set<MailTemplateVariabelen> set,
+            final Set<MailTemplateVariabelen> values) {
+        final EnumSet<MailTemplateVariabelen> copy = toEnumSet(set);
+        copy.addAll(values);
+        return Collections.unmodifiableSet(copy);
+    }
+
+    private static EnumSet<MailTemplateVariabelen> toEnumSet(
+            final Collection<MailTemplateVariabelen> values) {
+        return values.isEmpty()
+                ? EnumSet.noneOf(MailTemplateVariabelen.class)
+                : EnumSet.copyOf(values);
     }
 
     public String getVariabele() {
-        return String.format("{%s}", this);
+        return "{%s}".formatted(this);
     }
 }
